2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* Language.java (getNamedType): New method.
	(string2Type): Remove - merge into getTypeFor(String).

2012-10-07  Per Bothner  <per@bothner.com>

	* IfExp.java (compile): Handle case where else clause is never
	jumped to.  This fixes Savannah bug #36863
	"then clause grows stack with no else clause".

2012-10-06  Per Bothner  <per@bothner.com>

	Improved unreachability analysis.
	* ReferenceExp.java (validateApply): If function is a Continuation,
	then set type to neverReturnsType.
	* ChainLambdas.java: Improvements to unreachable code reporting.
	(visitSetExp): New method, so we can check for unreachable assignment.
	* ApplyExp.java (isAppendValues): New method.
	* FindTailCalls.java (visitApplyExp): Use new isAppendValues method.
	* InlineCalls.java (visitLambdaExp): If lambda cannot finish, then
	set its return type to neverReturnsType.
	* LambdaExp.java (canFinishCondition, canFinishListeners): Data
	structures used to figure out which functions can never return normally.
	(CAN_FINISH, CANNOT_FINISH, IN_EXPWALKER): New constants.
	(notifyCanFinish, notifyCanFinish): New methods.
	* PushApply.java: This pass now calculates canFinishCondition.
	(CanFinishTracker): New helper class.

2012-09-27  Per Bothner  <per@bothner.com>

	Improve handling of separate compilation of define-alias on classes.
	* LitTable.java (emit): Add support for PairClassType.
	* Declaration.java (load): If loading a reference to a simple class,
	load as class reference.  This is partly an optimization, but it
	also fixes an order dependency for a forwards define-alias.
	* InlineCalls.java (visitReferenceExp): Don't optimize to constant
	value if DONT_DEREFENCE set.
	* ClassInitializer.java (<init>): Move some logic to caller (below).
	* ClassExp.java (compileSetField): Change initialization of class