@@ -1910,13 +1910,13 @@ public class Compilation implements SourceLocator
           }
         if (wantedState >= RESOLVED && getState() < RESOLVED)
           {
+            language.resolve(this);
             // Doing addMainClass is a bit flakey in the case that
             // ModuleExp.alwaysCompile is false.  We don't want to
             // call addMainClass *unless* we're compiling, but when
             // dealing with eval, mutually recursive modules, etc
             // it doesn't quite work.
             addMainClass(mexp);
-            language.resolve(this);
             setState(messages.seenErrors() ? ERROR_SEEN : RESOLVED);
           }
 
