@@ -1,6 +1,7 @@
 ;; The next line is just to test the case that we don't extend ModuleBody.
 (module-extends <pair>)
-(module-implements java.io.Closeable)
+(define-alias Closeable java.io.Closeable)
+(module-implements Closeable)
 (module-export list-length-1 list-length-3 classify list1234 <A8711>
 	       length-diff1 length-diff2 length-diff3 make-literal make-pair
 	       my-array-7 mod2-v5 close abc-returner)
