@@ -1,3 +1,7 @@
+2012-11-02  Per Bothner  <per@bothner.com>
+
+	* Compilation.java (process): Defer addMainClass to after resolve.
+
 2012-10-20  Charles Turner <chturne@gmail.com>
 	    Per Bothner  <per@bothner.com>
 
